@@ -19,8 +19,8 @@ import static com.slack.astra.testlib.MetricsUtil.getCount;
 import static com.slack.astra.testlib.MetricsUtil.getTimerCount;
 import static com.slack.astra.testlib.MetricsUtil.getValue;
 import static com.slack.astra.testlib.TemporaryLogStoreAndSearcherExtension.MAX_TIME;
-import static com.slack.astra.util.AggregatorFactoriesUtil.createTermsAggregatorFactoriesBuilder;
 import static com.slack.astra.util.AggregatorFactoriesUtil.createGenericDateHistogramAggregatorFactoriesBuilder;
+import static com.slack.astra.util.AggregatorFactoriesUtil.createTermsAggregatorFactoriesBuilder;
 import static com.slack.astra.util.AggregatorJSONUtil.createGenericDateHistogramJSONBlob;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
@@ -93,7 +93,6 @@ import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
 import org.junit.jupiter.api.io.TempDir;
-import org.opensearch.search.aggregations.bucket.terms.StringTerms;
 import software.amazon.awssdk.services.s3.S3AsyncClient;
 
 public class IndexingChunkManagerTest {
@@ -380,13 +379,13 @@ public class IndexingChunkManagerTest {
   @Test
   public void testAddMessageSearchMessageForObjectAndNonObjectMapping() throws Exception {
     ChunkRollOverStrategy chunkRollOverStrategy =
-            new DiskOrMessageCountBasedRolloverStrategy(
-                    metricsRegistry, 10 * 1024 * 1024 * 1024L, 1000000L);
+        new DiskOrMessageCountBasedRolloverStrategy(
+            metricsRegistry, 10 * 1024 * 1024 * 1024L, 1000000L);
 
-//    final String CHUNK_DATA_PREFIX = "testData";
+    //    final String CHUNK_DATA_PREFIX = "testData";
     initChunkManager(chunkRollOverStrategy, blobStore, MoreExecutors.newDirectExecutorService());
 
-    List <Trace.Span> messages = SpanUtil.makeSpansWithObjectAndNonObject();
+    List<Trace.Span> messages = SpanUtil.makeSpansWithObjectAndNonObject();
 
     int actualChunkSize = 0;
     int offset = 1;
@@ -406,37 +405,40 @@ public class IndexingChunkManagerTest {
     assertThat(getValue(LIVE_BYTES_INDEXED, metricsRegistry)).isEqualTo(actualChunkSize);
 
     SearchQuery searchQuery =
-            new SearchQuery(
-                    MessageUtil.TEST_DATASET_NAME,
-                    0,
-                    MAX_TIME,
-                    10,
-                    Collections.emptyList(),
-                    QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
-                    null,
-                    createTermsAggregatorFactoriesBuilder("test1", List.of(), "alerts.count", null, 1, 1, Map.of("_count", "asc")));
+        new SearchQuery(
+            MessageUtil.TEST_DATASET_NAME,
+            0,
+            MAX_TIME,
+            10,
+            Collections.emptyList(),
+            QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
+            null,
+            createTermsAggregatorFactoriesBuilder(
+                "test1", List.of(), "alerts.count", null, 1, 1, Map.of("_count", "asc")));
     SearchResult<LogMessage> results = chunkManager.query(searchQuery, Duration.ofMillis(3000));
     assertThat(results.hits.size()).isEqualTo(2);
     assert results.internalAggregation != null;
-    String expectedStr = "{\"test1\":{\"doc_count_error_upper_bound\":0,\"sum_other_doc_count\":0,\"buckets\":[{\"key\":\"1\",\"doc_count\":1}]}}";
+    String expectedStr =
+        "{\"test1\":{\"doc_count_error_upper_bound\":0,\"sum_other_doc_count\":0,\"buckets\":[{\"key\":\"1\",\"doc_count\":1}]}}";
     assertThat(results.internalAggregation.toString()).isEqualTo(expectedStr);
 
     searchQuery =
-            new SearchQuery(
-                    MessageUtil.TEST_DATASET_NAME,
-                    0,
-                    MAX_TIME,
-                    10,
-                    Collections.emptyList(),
-                    QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
-                    null,
-                    createTermsAggregatorFactoriesBuilder("test1", List.of(), "alerts", null, 1, 1, Map.of("_count", "asc")));
+        new SearchQuery(
+            MessageUtil.TEST_DATASET_NAME,
+            0,
+            MAX_TIME,
+            10,
+            Collections.emptyList(),
+            QueryBuilderUtil.generateQueryBuilder("", 0L, MAX_TIME),
+            null,
+            createTermsAggregatorFactoriesBuilder(
+                "test1", List.of(), "alerts", null, 1, 1, Map.of("_count", "asc")));
     results = chunkManager.query(searchQuery, Duration.ofMillis(3000));
     assertThat(results.hits.size()).isEqualTo(2);
     assert results.internalAggregation != null;
-    expectedStr = "{\"test1\":{\"doc_count_error_upper_bound\":0,\"sum_other_doc_count\":0,\"buckets\":[]}}";
+    expectedStr =
+        "{\"test1\":{\"doc_count_error_upper_bound\":0,\"sum_other_doc_count\":0,\"buckets\":[]}}";
     assertThat(results.internalAggregation.toString()).isEqualTo(expectedStr);
-
   }
 
   @Test
